# XenQ

./: .gitignore  README.md  params.yaml  schema.yaml  setup.py  template.py
.github/workflows/: ci.yml
agent/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
agent/src/xenq_agent/: __init__.py
agent/src/xenq_agent/api/: __init__.py  agent_api.py
agent/src/xenq_agent/components/: __init__.py
agent/src/xenq_agent/components/code_execution/: __init__.py  python_executor.py
agent/src/xenq_agent/components/llm/: __init__.py  llama_inference.py  model_inference.py  model_loader.py  temp.txt
agent/src/xenq_agent/components/retrieval/: __init__.py
agent/src/xenq_agent/config/: __init__.py  settings.py
agent/src/xenq_agent/utils/: __init__.py  logger.py
agent/tests/: __init__.py  test_agent.py
client/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
client/src/xenq_client/: __init__.py  main.py
client/templates/: index.html
client/tests/: __init__.py  test_client.py
docs/: architecture.md
docs/client/: xenq_client.md
research/: test.ipynb  test.py  test_aql_query.ipynb  test_llm.ipynb  test_sys_manager.ipynb  test_web.ipynb  trials.ipynb
server/: Dockerfile  README.md  main.py  output.txt  pyproject.toml  requirements.txt  setup.py
server/config/: config.yaml
server/dickens/: graph_chunk_entity_relation.graphml.xml  kv_store_doc_status.json  kv_store_llm_response_cache.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
server/src/xenq_server/: __init__.py  main.py
server/src/xenq_server/api/: __init__.py  server_api.py
server/src/xenq_server/components/: __init__.py  authentication.py  tool_invoker_json.py  user_management.py
server/src/xenq_server/components/LightRAG/: __init__.py  pyproject.toml  tool.py  vllm_imp.py
server/src/xenq_server/components/LightRAG/lightrag/: operate.py  prompt.py
server/src/xenq_server/components/LightRAG/lightrag/kg/: networkx_impl.py
server/src/xenq_server/components/LightRAG/lightrag/llm/: vllm_implementation.py
server/src/xenq_server/components/client/: __init__.py  client_connect.py
server/src/xenq_server/components/llm/: __init__.py  llama_inference.py  model_loader.py
server/src/xenq_server/components/query/: __init__.py  history_store.py  query_manager.py
server/src/xenq_server/components/retrieval/: __init__.py  context_manager.py  vector_store.py
server/src/xenq_server/components/web_query/: __init__.py  search_engine.py  summarizer.py  web_scraper.py
server/src/xenq_server/config/: __init__.py  settings.py
server/src/xenq_server/utils/: __init__.py  chainlit_setup.py  logger.py  qwen_sys.py  sys_p.py
server/tests/: __init__.py  test_server.py
(+12 files in other folders)
