[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xenq_agent"
version = "0.0.0"
description = "XenQ: An Intelligent RAG-Powered AI Assistant for Seamless Data Interaction"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Sirajuddin Shaik", email="shaiksirajuddin9949@gmail.com" }
]
license = { text = "MIT" }
keywords = ["rag", "llm", "agent", "fastapi", "xenq"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # If you have runtime dependencies, list them here
    # "fastapi",
    # "transformers",
    # "torch",
]

[project.urls]
Homepage = "https://github.com/SirajuddinShaik/XenQ"
BugTracker = "https://github.com/SirajuddinShaik/XenQ/issues"

[tool.setuptools.packages.find]
where = ["src"]
