[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lightrag"
version = "0.1.0"
description = "LightRAG: Simple and Fast Retrieval-Augmented Generation"
authors = [
    { name="Your Name", email="your@email.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["retrieval", "rag", "llm", "nlp"]

[project.urls]
Homepage = "https://github.com/yourusername/lightrag"
Documentation = "https://github.com/yourusername/lightrag#readme"
Source = "https://github.com/yourusername/lightrag"

[project.optional-dependencies]
api = []         # Add later in separate requirements file
tools = []       # Add later in separate requirements file

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]
